--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <br><br>
 <label>Object name:</label>
 <br><br>
-<input type="text" id="tb" class="tb" size="50">
+<input type="text" id="objName" class="tb" size="50">
 <br><br>
 <button class="btn btn-success" onclick="start()" id="start">Start</button>
 <br><br>
